# Dobot

castle_voice/castle_voice_system/: CMakeLists.txt  package.xml
castle_voice_system/: CMakeLists.txt
castle_voice_system/launch/: castle_command.launch  voice_nav.launch  voice_object.launch
castle_voice_system/params/: objectDetect.xml  voiceNav.xml
castle_voice_system/scripts/: castle_cmd_analysis.py  object_detect.py  voice_cmd_word_understanding.py  voice_nav.py
castle_voice_system/src/: c.xml  hg_tl_nlu.cpp  hg_xf_order.cpp  object_order.cpp  speech_recognizer.cpp  voiceNav.xml  (+1 more)
castlex_2dnav/: CMakeLists.txt  package.xml
castlex_2dnav/launch/: amcl_demo.launch  castlex_amcl_demo.launch  castlex_gmapping_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
castlex_2dnav/launch/include/: amcl.launch  castlex_amcl.launch  castlex_gmapping.launch  castlex_move_base.launch  gmapping.launch  move_base.launch
castlex_2dnav/maps/: test_map.pgm
castlex_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
castlex_2dnav/params/backup/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
castlex_2dnav/params/backup/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
castlex_2dnav/params/backup/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
castlex_2dnav/rviz/: castlex_nav.rviz
diego_nav/: config.tar
dobot/: CMakeLists.txt
object_detect/: CMakeLists.txt  README.md
xf_awake/: CMakeLists.txt  package.xml
(+110 files in other folders)
